fix(website): use `overflow: auto` instead of to `overflow: scroll` scrollbars by default (#2436)
* fix(website): use overflow-y-auto to hide scrollbars by default

* fix(ui): use dark elements

--- a/website/styles/globals.css
+++ b/website/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  color-scheme: dark;
+}
+
 html,
 body,
 #__next {
